<resources>
    <string name="app_name">NeighboursChatApp</string>
    <string name="hello_login_fragment">Hello login fragment</string>
    <string name="hello_register_fragment">Hello register fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_to_registration">Don\'t have an account? Go to registration</string>
    <string name="select_photo">Select photo</string>
    <string name="user_name">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="profile">Profile</string>
    <string name="new_message">New Message</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="set_distance">Set search distance</string>
    <string name="block_user">Block user</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_space"> </string>
    <string name="image_new_message">Blue dot for new message</string>
    <string name="first_screen_title">Meet your neighbour</string>
    <string name="first_screen_des">Ever wonder who is staying next door but never have a chance to meet them?</string>
    <string name="second_screen_title">Start at ease</string>
    <string name="second_screen_des">Find people and start conversation in the easiest and most comfortable way that you can imagine.</string>
    <string name="third_screen_title">Find own kind</string>
    <string name="third_screen_des">Get the one with the same interest, now you will never have to go solo again.</string>
    <string name="setting_set_distance">Search Distance</string>
    <string name="zero_km">0 kilometers</string>
    <string name="privacy_policy">Read our privacy policy</string>
    <string name="user_deleted">User deleted</string>
    <string name="i_agree">I agree to the Privacy Policy</string>
    <string name="profile_picture">Profile picture</string>
    <string name="age">Age</string>
    <string name="update_profile">Update profile</string>
    <string name="about">About</string>
    <string name="iv_content_description">ImageView</string>
    <string name="save">SAVE</string>
    <string name="recent_chats_toolbar">LATEST CHATS</string>
    <string name="update_profile_toolbar">EDIT PROFILE</string>
    <string name="start_new_chat_toolbar">WHO IS NEAR YOU?</string>
    <string name="info_message_toolbar_new_chat">Click on user to start new conversation</string>
    <string name="block_text">Block</string>
    <string name="settings_text_toolbar">SETTINGS</string>
    <string name="block_user_text_toolbar">BLOCK USER</string>
    <string name="set_distance_text_toolbar">SET DISTANCE</string>
    <string name="user_about">" %1$s "</string>

</resources>