<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/ConstraintLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/city_background"
tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/border_toolbar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_image_select_photo"
        android:text="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/round_picture"
    android:layout_width="150dp"
    android:layout_height="150dp"
    app:civ_border_color="@android:color/holo_blue_dark"
    app:civ_border_width="2dp"
    app:layout_constraintBottom_toBottomOf="@+id/profile_button"
    app:layout_constraintEnd_toEndOf="@+id/profile_button"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@+id/profile_button"
    app:layout_constraintTop_toTopOf="@+id/profile_button"
    app:layout_constraintVertical_bias="1.0" />

<EditText
    android:id="@+id/age_profile"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:text="@string/age"
    android:textColor="@android:color/black"
    app:layout_constraintEnd_toEndOf="@+id/name_profile"
    app:layout_constraintStart_toStartOf="@+id/name_profile"
    app:layout_constraintTop_toBottomOf="@+id/name_profile" />

<EditText
    android:id="@+id/interest_profile"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:textColor="@android:color/black"
    android:maxLength="60"
    app:layout_constraintEnd_toEndOf="@+id/age_profile"
    app:layout_constraintStart_toStartOf="@+id/age_profile"
    app:layout_constraintTop_toBottomOf="@+id/age_profile"
    tools:text="Interest" />

<Button
    android:id="@+id/save_button_profile"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_edittext_register_login"
    android:textColor="@android:color/black"
    android:text="@string/update_profile"
    app:layout_constraintEnd_toEndOf="@+id/interest_profile"
    app:layout_constraintStart_toStartOf="@+id/interest_profile"
    app:layout_constraintTop_toBottomOf="@+id/interest_profile" />

<EditText
    android:id="@+id/name_profile"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="24dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:text="@string/user_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/profile_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/user_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_profile"
        app:layout_constraintStart_toStartOf="@+id/name_profile" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/age"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/age_profile"
        app:layout_constraintStart_toStartOf="@+id/age_profile" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/about"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/interest_profile"
        app:layout_constraintStart_toStartOf="@+id/interest_profile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_picture_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/tv_update_profile_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile_toolbar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="@font/bitter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_button_profile_toolbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/back_button_line_toolbar"
        android:contentDescription="@string/iv_content_description" />


</androidx.constraintlayout.widget.ConstraintLayout>
