<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city_background"
    tools:context=".SetDistanceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/border_toolbar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_set_distance_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bitter"
        android:text="@string/set_distance_text_toolbar"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_button_set_distance_toolbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/back_button_line_toolbar"
        android:contentDescription="@string/iv_content_description" />


    <ImageView
        android:id="@+id/iv_home_button_set_distance_toolbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/iv_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/home_icon_white_b_toolbar" />

    <TextView
        android:id="@+id/tv_set_distance_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/setting_set_distance"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="@font/bitter"
        app:layout_constraintBottom_toTopOf="@+id/location_seekBar"
        app:layout_constraintStart_toStartOf="@+id/location_seekBar" />

    <SeekBar
        android:id="@+id/location_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="2dip"
        android:maxHeight="5dip"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:max="10"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/zero_km"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="@font/bitter"
        app:layout_constraintBottom_toTopOf="@+id/location_seekBar"
        app:layout_constraintEnd_toEndOf="@+id/location_seekBar" />

    <Button
        android:id="@+id/buttonSaveNeighbourLocationDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:theme="@style/MyButton"
        app:layout_constraintEnd_toEndOf="@+id/location_seekBar"
        app:layout_constraintStart_toStartOf="@+id/location_seekBar"
        app:layout_constraintTop_toBottomOf="@+id/location_seekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>